--- a/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
@@ -34,6 +34,7 @@ ViewData["Title"]="Ture";
               {
                 <div><a asp-page="./TuraIzmeni" asp-route-id="@tura.IdTure">Izmeni turu</a></div>
 				<div><a asp-page="./TuraObrisi"  asp-route-id="@tura.IdTure">Obrisi turu</a></div>
+                <div><a asp-page="./TuraDodajZnamenitosti"  asp-route-id="@tura.IdTure">Dodaj znamenitosti u turi</a></div>
               }
             </div>
         </div>
