--- a/Aplikacija/KonacniProjekat/Pages/RezervacijaSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/RezervacijaSve.cshtml
@@ -8,26 +8,42 @@ ViewData["Title"]="Rezervacije";
     <h1 class="display-4">Rezervacije</h1>
 </div>
 
-<div>
-    <table class="table table-bordered">
-        <thead>
-            <th>ID rezervacije</th>
-            <th>Id ture</th>
-            <th></th>
-            <th></th>
-        </thead>
-        <tbody>
-            <form method="get">
-                @foreach (var rezervacija in Model.SveRezervacije)
+@if(SessionClass.TipKorisnika != null)
+{
+    <div>
+        <table class="table table-bordered">
+            <thead>
+                <th>ID rezervacije</th>
+                <th>Datum</th>
+                <th>Broj osoba</th>
+                <th></th>
+                @if (SessionClass.TipKorisnika == "T")
                 {
-                    <tr>
-                        <td>@rezervacija.IdRezervacije</td>
-                        <td>@rezervacija.IdTureR</td>
-                        <td><a asp-page="./RezervacijaJedna" asp-route-id="@Model.SessionId" asp-route-rezervacija="@rezervacija.IdRezervacije">Vidi rezervaciju</a></td>
-                        <td></td>
-                    </tr>
+                    <th></th>
                 }
-            </form>
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                <form method="get">
+                    @foreach (var rezervacija in Model.SveRezervacije)
+                    {
+                        <tr>
+                            <td>@rezervacija.IdRezervacije</td>
+                            <td>@rezervacija.Datum</td>
+                            <td>@rezervacija.BrojOsoba</td>
+                            <td><a asp-page="./RezervacijaJedna" asp-route-id="@rezervacija.IdRezervacije">Vidi rezervaciju</a></td>
+                            @if (SessionClass.TipKorisnika == "T")
+                            {
+                                <td><a asp-page="./RezervacijaOtkazi" asp-route-id="@rezervacija.IdRezervacije">Otkaži rezervaciju</a></td>
+                            }
+                        </tr>
+                    }
+                </form>
+            </tbody>
+        </table>
+    </div>
+
+}
+else
+{
+        <div class="alert alert-danger" role="alert" style="text-align: center;">Morate biti ulogovani da biste videli svoje rezervacije.</div>
+}
