--- a/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
@@ -9,7 +9,7 @@
 <form method="post">
 
     <div class="text-center">
-        <h2 class="display-4">Kviz: @Model.KvizZaIzradu.NazivKviza</h2>
+        @*<h2 class="display-4">Kviz: @Model.KvizZaIzradu.NazivKviza</h2>*@
     </div>
     
     @{
