--- a/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
@@ -9,12 +9,13 @@
 </div>
 
 <form method="post">
-    <div class="form-group">
-        <label class="form-control">Naziv kviza:</label> <input asp-for="NoviKviz.NazivKviza" class="form-control" placeholder="Naziv kviza" />
-        <label class="form-control">Znamenitost:</label>    <select class="form-control" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
-                                                                <option value="">Bez znamenitosti</option>
-                                                            </select>
-
-        <button type="submit">Dodaj novi kviz</button>
+    <div class="dodaj">
+        <div id="formContent">
+            <label class="form-control">Naziv kviza:</label> <input asp-for="NoviKviz.NazivKviza" class="form-control" placeholder="Naziv kviza" />
+            <label class="form-control">Znamenitost:</label>    <select class="form-control" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
+                                                                    <option value="">Bez znamenitosti</option>
+                                                                </select>
+            <button type="submit">Dodaj novi kviz</button>
+        </div>
     </div>
 </form>
