--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
@@ -9,8 +9,8 @@ ViewData["Title"]="Nova znamenitost";
 </div>
    @if(SessionClass.TipKorisnika=="A"){
 <form method="post">
-    <div class="form-group">
-     
+    <div class="dodaj">
+        <div id="formContent">
         <label class="form-control">Naziv:</label> <input asp-for="NovaZnamenitost.NazivZnamenitosti" class="form-control" placeholder="Naziv" required />
         <label class="form-control">Lokacija:</label> <input asp-for="NovaZnamenitost.Lokacija" class="form-control" placeholder="Lokacija" required />
         <label class="form-control">Opis:</label> <input asp-for="NovaZnamenitost.Opis" class="form-control" placeholder="Opis" required />
@@ -21,6 +21,7 @@ ViewData["Title"]="Nova znamenitost";
         <label class="form-control">Dodajte sliku:</label> <input type="file" asp-for="NovaZnamenitost.Slika"  placeholder="Slika" required />
        
         <button type="submit">Dodaj novu znamenitost</button>
+        </div>
     </div>
 </form>
 }
