--- a/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
@@ -13,18 +13,20 @@
 </div>
 
 <form method="post">
-    <div class="form-group" >
-        <input type="hidden" asp-for="KvizId" />
-        <input type="hidden" asp-for="SessionId" />
-        <label class="form-control">Pitanje:</label> <input asp-for="NovoPitanje.TekstPitanja" placeholder="Unesite tekst pitanja" />
-        <label class="form-control">Odgovor A:</label> <input asp-for="NovoPitanje.OdgovorA" placeholder="A" />
-        <label class="form-control">Odgovor B:</label> <input asp-for="NovoPitanje.OdgovorB" placeholder="B" />
-        <label class="form-control">Odgovor C:</label> <input asp-for="NovoPitanje.OdgovorC" placeholder="C" />
-        <label class="form-control select-fit-text">Tačan odgovor je pod:</label>    <select class="form-control" asp-for="IzborTacnogOdgovoraInt">
-                                                                        <option value="1">A</option>
-                                                                        <option value="2">B</option>
-                                                                        <option value="3">C</option>
-                                                                    </select>
-        <button type="submit">Dodaj pitanje</button>
+    <div class="dodaj" >
+        <div id="formContent">
+             <input type="hidden" asp-for="KvizId" />
+            <input type="hidden" asp-for="SessionId" />
+            <label class="form-control">Pitanje:</label> <input asp-for="NovoPitanje.TekstPitanja" placeholder="Unesite tekst pitanja" />
+            <label class="form-control">Odgovor A:</label> <input asp-for="NovoPitanje.OdgovorA" placeholder="A" />
+            <label class="form-control">Odgovor B:</label> <input asp-for="NovoPitanje.OdgovorB" placeholder="B" />
+            <label class="form-control">Odgovor C:</label> <input asp-for="NovoPitanje.OdgovorC" placeholder="C" />
+            <label class="form-control select-fit-text">Tačan odgovor je pod:</label>    <select class="form-control" asp-for="IzborTacnogOdgovoraInt">
+                                                                            <option value="1">A</option>
+                                                                            <option value="2">B</option>
+                                                                            <option value="3">C</option>
+                                                                        </select>
+           <button type="submit">Dodaj pitanje</button>
+        </div>
     </div>
 </form>
