--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Vodici</h1>
 </div>
-<div class="row" style="margin: 0 -70px;">
+<div class="row">
 @foreach (var vodic in Model.Vodici) 
 {
 <div class="column">
