--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -26,7 +26,7 @@ ViewData["Title"]="Znamenitosti";
 <button type="submit">Prikazi</button>
 </div>
 
-<div class="row" style="margin: 0 -70px;">
+<div class="row">
 @foreach (var znamenitost in Model.SveZnamenitosti) 
 {
      <div class="column">
